# Cross_corners_script_Ngspice

./: .gitignore  README.md  cross_corners.py  cross_corners_with_temp.py  main.py  pyproject.toml  requirements.txt  run_ngspice.py
tests/: test_cross_corners.py
